# ICP-Implementation

./: .gitignore  CMakeLists.txt  Dependency.cmake  README.md
examples/: gicp_example.cpp  icp_example.cpp  icp_plane_example.cpp
modules/: CMakeLists.txt
modules/ICP/: CMakeLists.txt
modules/ICP/include/ICP/: ceres_optimizer.hpp  gicp.hpp  icp.hpp  icp_base.hpp  icp_plane.hpp  utils.hpp
modules/ICP/src/: ceres_optimizer.cpp  gicp.cpp  icp.cpp  icp_base.cpp  icp_plane.cpp
